--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ var/
 *.egg
 
 # PyInstaller
-#  Usually these sharable are written by a python script from a template
+#  Usually these shareable are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
